--- a/doc_time/pubspec.yaml
+++ b/doc_time/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   easy_localization: ^3.0.8
   # For splash screen 
   flutter_native_splash: ^2.4.6
+  # An SVG rendering and widget library for Flutter, which allows painting
+  flutter_svg: ^2.2.0
+  # For adding screens abd font size
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -78,9 +82,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
